# airjump

./: Cargo.toml  Config.toml  Makefile  README.md  TODO.md  config.toml  debug.html  release.html
sounds/: wood_hit.aup
sounds/wood_hit_data/e00/d00/: e000044e.au
src/: app.rs  audio.rs  backtrace_hack.rs  configuration.rs  dummy_audio.rs  emscripten.rs  emscripten_audio.js  emscripten_audio.rs  error.rs  graphics.rs  main.rs  map.rs  math.rs  physics.rs  rodio_audio.rs  spatial_hashing.rs  ui.rs
src/api/android/: mod.rs
